# wb86-pose-pipeline

./: .gitignore  README.md  pyproject.toml
configs/: default.yaml
docker/: Dockerfile
envs/: wb86-win-cpu.yml  wb86-win-gpu.yml
src/wb86/: __init__.py  api.py  cli.py  mp86.py
src/wb86/detectors/: __init__.py  base.py  yolov8.py
src/wb86/ops/: __init__.py  mapping.py  preprocess.py  roi.py  smoothing.py  visualize.py
src/wb86/refine/: __init__.py  face.py  hand.py
src/wb86/wholebody/: __init__.py  mmpose_wholebody.py
src/wb86_pose_pipeline.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: check_json.py  sr_upscale.py  test_api_single_image.py  test_mapping.py  test_smoothing.py
